# TRPG

./: .env  .gitignore  README.md  db.sqlite3  game.js  manage.py  pyproject.toml
AbleLearn_Front/: package-lock.json  package.json  vite.config.js
AbleLearn_Front/src/: App.jsx  main.jsx
AbleLearn_Front/src/component/Chat/: ChatItem.css  ChatItem.jsx  ChatPanel.css  ChatPanel.jsx  Profile.css  Profile.jsx
AbleLearn_Front/src/component/GameState/: GameStatePanel.css  GameStatePanel.jsx
AbleLearn_Front/src/component/MainPanel/: Panel.css  Panel.jsx
TRPG_Hero/: asgi.py  settings.py  urls.py  wsgi.py
game/: chatbot.py  game_logic.py  models.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_remove_heroability_ability_remove_heroability_hero_and_more.py  0002_storyprogress_plot_points.py  0003_gameresult.py  0003_gamesession_max_turns_alter_gamesession_current_turn.py  0004_remove_characterability_ability_and_more.py  0005_gamesession_is_completed_gamesession_result_and_more.py  0006_remove_storyprogress_next_chapter_threshold_and_more.py  0007_alter_gamesession_start_time.py  0008_alter_gamesession_outcome.py  0009_alter_gamesession_start_time.py  0010_alter_gamesession_is_completed.py  0011_alter_gamesession_result.py  0012_alter_gamesession_is_completed_and_more.py
game/templates/game/: base.html  gamesheet.html  home.html  login.html  play.html  register.html  result.html
static/css/: style.css
static/js/: game.js  game_sheet.js  start_game.js
staticfiles/css/: style.css
staticfiles/js/: game.js
(+2 files in other folders)
