[tool.poetry]
name = "trpggame"
version = "0.1.0"
description = ""
authors = ["jm-jung <jmsk7554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-dotenv = "^1.0.1"
transformers = "^4.44.2"
openai = "^1.43.0"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
